--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "type": "module",
-  "author":"olepiob",
+  "author": "olepiob",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:ts":"tsc",
+    "build:ts": "tsc",
     "build:sass": "sass  --no-source-map src/sass:public/css",
     "copy:html": "copyfiles -u 1 ./src/*.html public",
     "copy:assets": "copyfiles -u 1 ./src/assets/**/* public",
@@ -23,18 +23,27 @@
     "postbuild": "postcss public/css/*.css -u autoprefixer cssnano -r --no-map"
   },
   "keywords": [],
-
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.22.20",
     "@types/node": "^20.4.1",
-    "typescript": "^4.9.3",
     "autoprefixer": "^10.4.2",
+    "babel-loader": "^9.1.3",
     "browser-sync": "^2.27.7",
     "copyfiles": "^2.4.1",
+    "css-loader": "^6.8.1",
     "cssnano": "^5.0.17",
+    "html-webpack-plugin": "^5.5.3",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
     "postcss-cli": "^9.1.0",
-    "sass": "^1.49.8"
+    "sass": "^1.68.0",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
+    "ts-loader": "^9.4.4",
+    "typescript": "^4.9.3",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   }
 }
