--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,14 @@
 {
   "compilerOptions": {
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "target": "ES2020",
+    "module": "ES6",
+    "moduleResolution": "Node",
+    "target": "ES5",
     "sourceMap": true,
     "outDir": "public/scripts",
-    "strict": true
+    "strict": true,
+    "noImplicitAny": true,
+    "removeComments": true,
+    "allowSyntheticDefaultImports": true, 
   },
   "include": [
     "src/**/**/*"
