--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,14 @@
 {
   "compilerOptions": {
-    "module": "ES6",
-    "moduleResolution": "Node",
-    "target": "ES5",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "target": "ES2022",
     "sourceMap": true,
     "outDir": "public/scripts",
     "strict": true,
     "noImplicitAny": true,
     "removeComments": true,
-    "allowSyntheticDefaultImports": true, 
+    "allowSyntheticDefaultImports": true
   },
-  "include": [
-    "src/**/**/*"
-  ],
+  "include": ["src/**/**/*"]
 }
