--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
     "start": "tsc && npm-run-all copy --parallel watch serve",
     "build": "tsc && npm-run-all copy:html build:*",
     "build:ts": "tsc",
-    "build:sass": "sass  --no-source-map src/sass:public/css",
+    "build:sass": "sass --no-source-map src/sass:public/css",
     "build:webpack": "webpack",
-    "build:prod:webpack": "tsc && npm-run-all copy --parallel build:*",
-    "postbuild": "postcss public/css/*.css -u autoprefixer cssnano -r --no-map"
+    "postbuild": "postcss dist/css/*.css -u -r --no-map"
   },
   "keywords": [],
   "license": "ISC",
@@ -45,6 +44,7 @@
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.4",
     "typescript": "^4.9.3",
+    "uncss": "^0.17.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   }
