--- a/package.json
+++ b/package.json
@@ -16,11 +16,10 @@
     "watch": "npm-run-all --parallel watch:*",
     "serve": "browser-sync start --server public --files public",
     "start": "tsc && npm-run-all copy --parallel watch serve",
-    "build": "tsc && npm-run-all copy:html build:*",
+    "build": "tsc && npm-run-all copy:* build:*",
     "build:ts": "tsc",
     "build:sass": "sass --no-source-map src/sass:public/css",
-    "build:webpack": "webpack",
-    "postbuild": "postcss dist/css/*.css -u -r --no-map"
+    "build:webpack": "webpack"
   },
   "keywords": [],
   "license": "ISC",
@@ -38,7 +37,10 @@
     "html-webpack-plugin": "^5.5.3",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
-    "postcss-cli": "^9.1.0",
+    "postcss": "^7.0.39",
+    "postcss-cli": "^7.1.2",
+    "postcss-loader": "^7.3.4",
+    "postcss-uncss": "^0.17.0",
     "sass": "^1.68.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
