set up modal and terminal

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "sourceMap": true,
     "outDir": "public/scripts",
     "strict": true,
+    "strictNullChecks": false,
     "noImplicitAny": true,
     "removeComments": true,
     "allowSyntheticDefaultImports": true
