--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
     "watch:scripts": "onchange \"src/scripts/**/*\" -- npm run build:ts",
     "watch:assets": "onchange \"src/assets/**/*\" -- npm run copy:assets",
     "watch:html": "onchange \"src/*.html\" -- npm run copy:html",
-    "watch:sass": "sass  --no-source-map --watch src/sass:public/css",
+    "watch:tailwind": "tailwindcss -i ./src/styles/style.css -o ./public/styles/style.css --watch",
     "watch": "npm-run-all --parallel watch:*",
     "serve": "browser-sync start --server public --files public",
     "start": "tsc && npm-run-all copy --parallel watch serve",
     "build": "tsc && npm-run-all copy:* build:*",
     "build:ts": "tsc",
-    "build:sass": "sass --no-source-map src/sass:public/css",
-    "build:webpack": "webpack"
+    "build:tw": "tailwindcss -i ./src/styles/style.css -o ./public/styles/style.css"
   },
   "keywords": [],
   "license": "ISC",
@@ -32,22 +31,11 @@
     "browser-sync": "^2.27.7",
     "copy-webpack-plugin": "^11.0.0",
     "copyfiles": "^2.4.1",
-    "css-loader": "^6.8.1",
-    "cssnano": "^5.0.17",
     "html-webpack-plugin": "^5.5.3",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
-    "postcss": "^7.0.39",
-    "postcss-cli": "^7.1.2",
-    "postcss-loader": "^7.3.4",
-    "postcss-uncss": "^0.17.0",
-    "sass": "^1.68.0",
-    "sass-loader": "^13.3.2",
-    "style-loader": "^3.3.3",
+    "tailwindcss": "^3.4.1",
     "ts-loader": "^9.4.4",
-    "typescript": "^4.9.3",
-    "uncss": "^0.17.3",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "typescript": "^4.9.3"
   }
 }
