--- a/package.json
+++ b/package.json
@@ -1,51 +1,33 @@
 {
-  "name": "planetOxy",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
-  "author": "olepiob",
-  "scripts": {
-    "copy:html": "copyfiles -u 1 ./src/*.html public",
-    "copy:assets": "copyfiles -u 1 ./src/assets/**/* public",
-    "copy": "npm-run-all --parallel copy:*",
-    "watch:scripts": "onchange \"src/scripts/**/*\" -- npm run build:ts",
-    "watch:assets": "onchange \"src/assets/**/*\" -- npm run copy:assets",
-    "watch:html": "onchange \"src/*.html\" -- npm run copy:html",
-    "watch:sass": "sass  --no-source-map --watch src/sass:public/css",
-    "watch": "npm-run-all --parallel watch:*",
-    "serve": "browser-sync start --server public --files public",
-    "start": "tsc && npm-run-all copy --parallel watch serve",
-    "build": "tsc && npm-run-all copy:html build:*",
-    "build:ts": "tsc",
-    "build:sass": "sass  --no-source-map src/sass:public/css",
-    "build:webpack": "webpack",
-    "build:prod:webpack": "tsc && npm-run-all copy --parallel build:*",
-    "postbuild": "postcss public/css/*.css -u autoprefixer cssnano -r --no-map"
-  },
-  "keywords": [],
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.23.0",
-    "@babel/preset-env": "^7.22.20",
-    "@types/node": "^20.4.1",
-    "autoprefixer": "^10.4.2",
-    "babel-loader": "^9.1.3",
-    "browser-sync": "^2.27.7",
-    "copy-webpack-plugin": "^11.0.0",
-    "copyfiles": "^2.4.1",
-    "css-loader": "^6.8.1",
-    "cssnano": "^5.0.17",
-    "html-webpack-plugin": "^5.5.3",
-    "npm-run-all": "^4.1.5",
-    "onchange": "^7.1.0",
-    "postcss-cli": "^9.1.0",
-    "sass": "^1.68.0",
-    "sass-loader": "^13.3.2",
-    "style-loader": "^3.3.3",
-    "ts-loader": "^9.4.4",
-    "typescript": "^4.9.3",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
-  }
+	"name": "planet-oxy",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev --port 4200",
+		"launch": "vite dev --port 4200 --open",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "eslint ."
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/eslint": "^8.56.7",
+		"autoprefixer": "^10.4.19",
+		"eslint": "^9.0.0",
+		"eslint-plugin-svelte": "^2.36.0",
+		"globals": "^15.0.0",
+		"postcss": "^8.4.39",
+		"svelte": "^4.2.7",
+		"svelte-check": "^3.6.0",
+		"tailwindcss": "^3.4.4",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"typescript-eslint": "^8.0.0-alpha.20",
+		"vite": "^5.0.3"
+	},
+	"type": "module"
 }
