--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
         "lint": "eslint ."
     },
     "devDependencies": {
-        "@sveltejs/adapter-auto": "^3.0.0",
+        "@sveltejs/adapter-auto": "^3.3.1",
         "@sveltejs/adapter-netlify": "^4.3.1",
-        "@sveltejs/kit": "^2.0.0",
-        "@sveltejs/vite-plugin-svelte": "^3.0.0",
+        "@sveltejs/kit": "^2.5.27",
+        "@sveltejs/vite-plugin-svelte": "^4.0.0",
         "@types/eslint": "^8.56.7",
         "autoprefixer": "^10.4.19",
         "eslint": "^9.0.0",
-        "eslint-plugin-svelte": "^2.36.0",
+        "eslint-plugin-svelte": "^2.45.1",
         "globals": "^15.0.0",
+        "houdini": "^1.2.62",
+        "houdini-svelte": "^1.2.62",
         "postcss": "^8.4.39",
-        "svelte": "^4.2.7",
-        "svelte-check": "^3.6.0",
+        "svelte": "^5.0.0",
+        "svelte-check": "^4.0.0",
         "tailwindcss": "^3.4.4",
         "tslib": "^2.4.1",
-        "typescript": "^5.0.0",
+        "typescript": "^5.5.0",
         "typescript-eslint": "^8.0.0-alpha.20",
-        "vite": "^5.0.3",
-        "houdini": "^1.2.62",
-        "houdini-svelte": "^1.2.62"
+        "vite": "^5.4.4"
     },
     "type": "module"
 }
