--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "eslint": "^9.0.0",
         "eslint-plugin-svelte": "^2.45.1",
         "globals": "^15.0.0",
-        "houdini": "^1.2.62",
+        "houdini": "^1.3.0",
         "houdini-svelte": "^1.2.62",
         "postcss": "^8.4.39",
         "svelte": "^5.0.0",
@@ -32,5 +32,8 @@
         "typescript-eslint": "^8.0.0-alpha.20",
         "vite": "^5.4.4"
     },
-    "type": "module"
+    "type": "module",
+    "dependencies": {
+        "@sanity/client": "^6.22.4"
+    }
 }
