--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "postcss": "^8.4.39",
         "svelte": "^5.0.0",
         "svelte-check": "^4.0.0",
-        "tailwindcss": "^3.4.4",
+        "tailwindcss": "^4.0.6",
         "tslib": "^2.4.1",
         "typescript": "^5.5.0",
         "typescript-eslint": "^8.0.0-alpha.20",
@@ -34,6 +34,7 @@
     },
     "type": "module",
     "dependencies": {
-        "@sanity/client": "^6.22.4"
+        "@sanity/client": "^6.22.4",
+        "@tailwindcss/vite": "^4.0.6"
     }
 }
