added portfolio gql call updated gql refs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
         "rootDirs": [
             ".",
             "./.svelte-kit/types",
-            "./$houdini/types"
+            "./.houdini/types"
         ]
     }
 }
