--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "preview": "vite preview",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-        "lint": "eslint ."
+        "lint": "eslint .",
+        "init:houdini": "npx houdini@latest init"
     },
     "devDependencies": {
         "@sveltejs/adapter-auto": "^3.3.1",
@@ -21,8 +22,8 @@
         "eslint": "^9.0.0",
         "eslint-plugin-svelte": "^2.45.1",
         "globals": "^15.0.0",
-        "houdini": "^1.3.1",
-        "houdini-svelte": "^2.0.1",
+        "houdini": "^1.5.4",
+        "houdini-svelte": "^2.1.8",
         "svelte": "^5.0.0",
         "svelte-check": "^4.0.0",
         "tailwindcss": "^4.0.6",
