--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
         "lint": "eslint .",
-        "init:houdini": "npx houdini@latest init"
+        "init:houdini": "npx houdini@latest init",
+        "generate:houdini": "npx houdini generate"
     },
     "devDependencies": {
         "@sveltejs/adapter-auto": "^3.3.1",
