--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
-    "name": "planet-oxy",
-    "version": "0.0.1",
-    "private": true,
-    "scripts": {
-        "dev": "vite dev --port 4200",
-        "launch": "vite dev --port 4200 --open",
-        "build": "vite build",
-        "preview": "vite preview",
-        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-        "lint": "eslint .",
-        "init:houdini": "npx houdini@latest init",
-        "generate:houdini": "npx houdini generate"
-    },
-    "devDependencies": {
-        "@sveltejs/adapter-auto": "^3.3.1",
-        "@sveltejs/adapter-netlify": "^4.3.1",
-        "@sveltejs/kit": "^2.5.27",
-        "@sveltejs/vite-plugin-svelte": "^4.0.0",
-        "@types/eslint": "^8.56.7",
-        "autoprefixer": "^10.4.19",
-        "eslint": "^9.0.0",
-        "eslint-plugin-svelte": "^2.45.1",
-        "globals": "^15.0.0",
-        "houdini": "^1.5.4",
-        "houdini-svelte": "^2.1.8",
-        "svelte": "^5.0.0",
-        "svelte-check": "^4.0.0",
-        "tailwindcss": "^4.0.6",
-        "tslib": "^2.4.1",
-        "typescript": "^5.5.0",
-        "typescript-eslint": "^8.0.0-alpha.20",
-        "vite": "^5.4.4"
-    },
-    "type": "module",
-    "dependencies": {
-        "@sanity/client": "^6.22.4",
-        "@tailwindcss/vite": "^4.0.6"
-    }
+  "name": "planet-oxy",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev --port 4200",
+    "launch": "vite dev --port 4200 --open",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "eslint .",
+    "init:houdini": "npx houdini@latest init",
+    "generate:houdini": "npx houdini generate",
+    "pull:houdini": "npx houdini pull-schema"
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-auto": "^3.3.1",
+    "@sveltejs/adapter-netlify": "^4.3.1",
+    "@sveltejs/kit": "^2.5.27",
+    "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "@types/eslint": "^8.56.7",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^9.0.0",
+    "eslint-plugin-svelte": "^2.45.1",
+    "globals": "^15.0.0",
+    "houdini": "^1.5.4",
+    "houdini-svelte": "^2.1.8",
+    "svelte": "^5.0.0",
+    "svelte-check": "^4.0.0",
+    "tailwindcss": "^4.0.6",
+    "tslib": "^2.4.1",
+    "typescript": "^5.5.0",
+    "typescript-eslint": "^8.0.0-alpha.20",
+    "vite": "^5.4.4"
+  },
+  "type": "module",
+  "dependencies": {
+    "@sanity/client": "^6.22.4",
+    "@tailwindcss/vite": "^4.0.6"
+  }
 }
