--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "globals": "^15.0.0",
     "houdini": "^1.5.4",
     "houdini-svelte": "^2.1.8",
+    "prettier": "^3.6.2",
+    "prettier-plugin-svelte": "^3.4.0",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "tailwindcss": "^4.0.6",
