--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "globals": "^15.0.0",
     "houdini": "^1.5.4",
     "houdini-svelte": "^2.1.8",
+    "mdsvex": "^0.12.3",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.6.14",
