--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@sveltejs/kit": "^2.5.27",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@types/eslint": "^8.56.7",
+    "@types/marked": "^5.0.2",
     "autoprefixer": "^10.4.19",
     "eslint": "^9.0.0",
     "eslint-plugin-svelte": "^2.45.1",
@@ -41,6 +42,8 @@
   "type": "module",
   "dependencies": {
     "@sanity/client": "^6.22.4",
-    "@tailwindcss/vite": "^4.0.6"
+    "@tailwindcss/vite": "^4.0.6",
+    "gray-matter": "^4.0.3",
+    "marked": "^17.0.0"
   }
 }
